identifiers-uri/tests/ui/uri_wrong_type.stderr
error[E0599]: no method named `as_str` found for type `u64` in the current scope
 --> tests/ui/uri_wrong_type.rs:3:10
  |
3 | #[derive(UriIdentifier)]
  |          ^^^^^^^^^^^^^ method not found in `u64`
  |
  = note: this error originates in the derive macro `UriIdentifier` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
 --> tests/ui/uri_wrong_type.rs:3:10
  |
3 | #[derive(UriIdentifier)]
  |          ^^^^^^^^^^^^^
  |          |
  |          expected `u64`, found `Uri<String>`
  |          arguments to this function are incorrect
  |
  = note: expected type `u64`
           found struct `Uri<String>`
note: tuple struct defined here
 --> tests/ui/uri_wrong_type.rs:5:8
  |
5 | struct BadId(u64);
  |        ^^^^^
  = note: this error originates in the derive macro `UriIdentifier` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
 --> tests/ui/uri_wrong_type.rs:3:10
  |
3 | #[derive(UriIdentifier)]
  |          ^^^^^^^^^^^^^
  |          |
  |          expected `&Uri<String>`, found `&u64`
  |          expected `&Uri<String>` because of return type
  |
  = note: expected reference `&Uri<String>`
             found reference `&u64`
  = note: this error originates in the derive macro `UriIdentifier` (in Nightly builds, run with -Z macro-backtrace for more info)
