identifiers-uri/tests/ui/uri_wrong_type.rs
use identifiers_uri::UriIdentifier;

#[derive(UriIdentifier)]
#[allowed_values(all)]
struct BadId(u64);

fn main() {}
